--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <footer>
             
             <div class="contenedorcopy">
-                <p class="copyright">	&#169; Copyright Diego Rivera - Web Developer / 2022</p>
+                <p class="copyright">	&#169; Copyright Diego Rivera - Web Developer / 2022-2023</p>
             </div>
             
 
