Se configura el textarea y scrollbar

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
 
                     <div class="contenedor-resultado">
-                        <p class="texto-encriptado"></p>
+                        <textarea class="texto-encriptado" readonly></textarea>
                     </div>
 
                     <div class="contenedor-copiar">
